# priceTracker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_drop.py
config/: products.yaml
src/: __init__.py  adapter_amazon_stub.py  adapter_canadacomputers.py  adapter_generic.py  cli.py  config_loader.py  content_writer.py  email_agent.py  engine.py  extract_simple.py  models.py  scan.py  storage.py
src/tests/: __init__.py  test_email.py  test_email_cli_summary.py  test_email_direct.py  test_email_list.py  test_email_quick.py  test_email_separate.py  test_gmail_auth.py
templates/: negative_email.j2  positive_email.j2  summary.j2
